--- a/schema/rules/relationships.yaml
+++ b/schema/rules/relationships.yaml
@@ -104,12 +104,12 @@ HAS_TEAM:
 
 
 HAS_REPO:
-  type: ONE_TO_MANY
+  type: ONE_TO_ONE
   fromType:
     System:
       graphql:
-        name: repositories
-        description: The repositories which store the system's source code
+        name: repository
+        description: The repository which stores the systems source code
   toType:
     Repository:
       graphql:
