--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
 		"@financial-times/n-logger": "^5.6.4",
 		"@financial-times/s3o-middleware": "^2.0.6",
 		"apollo-server-express": "^1.3.6",
+		"artillery": "^1.6.0-22",
+		"artillery-plugin-statsd": "^2.2.0",
 		"aws-sdk": "^2.263.1",
 		"body-parser": "^1.18.3",
 		"common-tags": "^1.7.2",
