Spell performance right

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"vault:env": "node -pe 'const { data } = JSON.parse(process.argv[1]); Object.keys(data).reduce((env, key) => { env += `${key}=${data[key]}\n`; return env}, \"\")' \"$(npm --silent run vault:read)\" > .env",
 		"precommit": "node_modules/.bin/secret-squirrel",
 		"commitmsg": "node_modules/.bin/secret-squirrel-commitmsg",
-		"test:perfomance": "docker-compose -f scripts/load-testing/statsd/docker-compose.yaml up -d && DEBUG=plugins:statsd artillery run -v '{\"api_key\": \"$LOAD_TEST_API_KEY\"}' scripts/load-testing/readQueries/heroku-rampup.yaml && docker-compose -f scripts/load-testing/statsd/docker-compose.yaml down"
+		"test:performance": "docker-compose -f scripts/load-testing/statsd/docker-compose.yaml up -d && DEBUG=plugins:statsd artillery run -v '{\"api_key\": \"$LOAD_TEST_API_KEY\"}' scripts/load-testing/readQueries/heroku-rampup.yaml && docker-compose -f scripts/load-testing/statsd/docker-compose.yaml down"
 	},
 	"nyc": {
 		"exclude": [
