--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
 		"vault:env": "node -pe 'const { data } = JSON.parse(process.argv[1]); Object.keys(data).reduce((env, key) => { env += `${key}=${data[key]}\n`; return env}, \"\")' \"$(npm --silent run vault:read)\" > .env",
 		"precommit": "node_modules/.bin/secret-squirrel",
 		"commitmsg": "node_modules/.bin/secret-squirrel-commitmsg",
-		"test:performance": "docker-compose -f scripts/load-testing/statsd/docker-compose.yaml up -d && DEBUG=plugins:statsd artillery run -v '{\"api_key\": \"$LOAD_TEST_API_KEY\"}' scripts/load-testing/readQueries/heroku-rampup.yaml && docker-compose -f scripts/load-testing/statsd/docker-compose.yaml down"
+		"test:load:run": "docker-compose -f scripts/load-testing/statsd/docker-compose.yaml up -d && artillery run scripts/load-testing/read-queries/heroku-$TEST_NAME.yaml && docker-compose -f scripts/load-testing/statsd/docker-compose.yaml down",
+		"test:load:crash": "TEST_NAME=crash npm run test:load:run",
+		"test:load:cruising": "TEST_NAME=cruising npm run test:load:run",
+		"test:load:rampup": "TEST_NAME=rampup npm run test:load:run",
+		"test:load:warmup": "TEST_NAME=warmup npm run test:load:run"
 	},
 	"nyc": {
 		"exclude": [
@@ -54,34 +58,33 @@
 		"ext": "js,graphql,yaml"
 	},
 	"dependencies": {
-		"@financial-times/n-logger": "^5.6.4",
+		"@financial-times/n-logger": "^5.7.0",
 		"@financial-times/s3o-middleware": "^2.0.6",
-		"apollo-server-express": "^1.3.6",
-		"artillery": "^1.6.0-22",
-		"artillery-plugin-statsd": "^2.2.0",
-		"aws-sdk": "^2.263.1",
+		"apollo-server-express": "^1.4.0",
+		"aws-sdk": "^2.275.1",
 		"body-parser": "^1.18.3",
 		"common-tags": "^1.7.2",
 		"connect-timeout": "^1.9.0",
 		"date-fns": "^1.29.0",
 		"express": "^4.16.3",
-		"express-async-errors": "^2.1.2",
+		"express-async-errors": "^3.0.0",
 		"graphql": "^0.13.2",
-		"graphql-server-express": "^1.3.6",
+		"graphql-server-express": "^1.4.0",
 		"graphql-tools": "^3.0.1",
 		"http-errors": "^1.6.3",
 		"isomorphic-fetch": "^2.2.1",
 		"js-yaml": "^3.12.0",
-		"neo4j-driver": "^1.6.1",
-		"neo4j-graphql-js": "~0.1.23",
-		"nodemon": "^1.17.4"
+		"neo4j-driver": "^1.6.2",
+		"neo4j-graphql-js": "^0.1.24",
+		"nodemon": "^1.18.2"
 	},
 	"devDependencies": {
 		"@financial-times/secret-squirrel": "^2.8.0",
 		"artillery": "^1.6.0-22",
+		"artillery-plugin-statsd": "^2.2.0",
 		"casual": "^1.5.19",
 		"chai": "^4.1.2",
-		"dotenv": "^5.0.1",
+		"dotenv": "^6.0.0",
 		"eslint": "^4.19.1",
 		"eslint-config-origami-component": "^1.0.0",
 		"eslint-config-prettier": "~2.9.0",
@@ -89,10 +92,10 @@
 		"husky": "^0.14.3",
 		"lodash": "^4.17.10",
 		"mocha": "^5.1.1",
-		"nyc": "^11.8.0",
-		"prettier": "~1.12.1",
+		"nyc": "^12.0.2",
+		"prettier": "~1.13.7",
 		"proxyquire": "^2.0.1",
-		"sinon": "^4.5.0",
+		"sinon": "^6.1.3",
 		"sinon-chai": "^3.0.0",
 		"supertest": "^3.1.0",
 		"uuid": "^3.2.1"
