--- a/scripts/load-testing/statsd/docker-compose.yaml
+++ b/scripts/load-testing/statsd/docker-compose.yaml
@@ -1,13 +1,17 @@
 version: '3'
 services:
-  graphite-statsd:
-    image: graphiteapp/graphite-statsd
+  statsd:
+    image: jaconel/statsd
     restart: always
     ports:
-      - "80:80"
-      - "2003-2004:2003-2004"
-      - "2023-2024:2023-2024"
       - "8125:8125/udp"
       - "8126:8126"
-    volumes:
-      - ./load/statsd.conf:/opt/statsd
+    environment:
+      GRAPHITE_PORT_2003_TCP_PORT: 2003
+      GRAPHITE_PORT_2003_TCP_ADDR: graphite.ft.com
+      STATSD_PORT: 8125
+      GRAPHITE_GLOBAL_PREFIX: 'biz-ops-api.'
+      STATSD_DEBUG: 'true'
+      STATSD_DUMP_MSG: 'true'
+      STATSD_FLUSH_INTERVAL: 10000
+      GRAPHITE_LEGACY_NAMESPACE: 'false'
