--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"ext": "js,graphql,yaml"
 	},
 	"dependencies": {
+		"@financial-times/n-cluster": "^1.0.0",
 		"@financial-times/n-logger": "^5.6.4",
 		"@financial-times/s3o-middleware": "^2.0.6",
 		"apollo-server-express": "^1.3.6",
@@ -69,9 +70,10 @@
 		"http-errors": "^1.6.3",
 		"isomorphic-fetch": "^2.2.1",
 		"js-yaml": "^3.12.0",
+		"lodash": "^4.17.10",
 		"neo4j-driver": "^1.6.1",
-		"neo4j-graphql-js": "~0.1.23",
-		"nodemon": "^1.17.4"
+    "neo4j-graphql-js": "~0.1.23",
+		"uuid": "^3.2.1"
 	},
 	"devDependencies": {
 		"@financial-times/secret-squirrel": "^2.8.0",
@@ -83,14 +85,13 @@
 		"eslint-config-prettier": "~2.9.0",
 		"eslint-plugin-prettier": "~2.6.1",
 		"husky": "^0.14.3",
-		"lodash": "^4.17.10",
 		"mocha": "^5.1.1",
+		"nodemon": "^1.17.4",
 		"nyc": "^11.8.0",
 		"prettier": "~1.12.1",
 		"proxyquire": "^2.0.1",
 		"sinon": "^4.5.0",
 		"sinon-chai": "^3.0.0",
-		"supertest": "^3.1.0",
-		"uuid": "^3.2.1"
+		"supertest": "^3.1.0"
 	}
 }
