--- a/package.json
+++ b/package.json
@@ -1,97 +1,97 @@
 {
-	"name": "biz-ops-api",
-	"short": "biz-ops-api",
-	"team": "internal-products",
-	"version": "1.0.0",
-	"description": "",
-	"main": "server/app.js",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Financial-Times/biz-ops-api.git"
-	},
-	"engines": {
-		"node": ">= 8.11.1",
-		"npm": ">= 5.6.0"
-	},
-	"scripts": {
-		"lint": "eslint --cache --fix .",
-		"lint-ci": "eslint .",
-		"start": "nodemon -r dotenv/config server/app.js",
-		"debug": "npm start -- --inspect=0.0.0.0:9229",
-		"test:debug": "npm run test-dev --  --inspect-brk",
-		"test": "nyc mocha -- \"+(server|test|schema)/**/*.spec.js\"",
-		"test-dev": "NODE_ENV=test mocha --require dotenv/config 'test/**/*.spec.js'",
-		"init-db": "node -r dotenv/config schema/init-db.js",
-		"docker:test": "docker-compose exec \"$npm_package_short\" sh -c 'npm run test'",
-		"vault:read": "vault read --format json  /secret/teams/$npm_package_team/$npm_package_name/development",
-		"vault:env": "node -pe 'const { data } = JSON.parse(process.argv[1]); Object.keys(data).reduce((env, key) => { env += `${key}=${data[key]}\n`; return env}, \"\")' \"$(npm --silent run vault:read)\" > .env",
-		"precommit": "node_modules/.bin/secret-squirrel",
-		"commitmsg": "node_modules/.bin/secret-squirrel-commitmsg"
-	},
-	"nyc": {
-		"exclude": [
-			"**/test/**",
-			"**/*.spec.js",
-			"**/node_modules/**"
-		],
-		"reporter": [
-			"html",
-			"text",
-			"text-summary",
-			"lcov"
-		],
-		"all": true,
-		"cache": true
-	},
-	"author": "reliability engineering <reliability.engineering@ft.com>",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/Financial-Times/biz-ops-api/issues"
-	},
-	"homepage": "https://github.com/Financial-Times/biz-ops-api#readme",
-	"nodemonConfig": {
-		"ext": "js,graphql,yaml"
-	},
-	"dependencies": {
-		"@financial-times/n-cluster": "^1.0.0",
-		"@financial-times/n-logger": "^5.6.4",
-		"@financial-times/s3o-middleware": "^2.0.6",
-		"apollo-server-express": "^1.3.6",
-		"aws-sdk": "^2.263.1",
-		"body-parser": "^1.18.3",
-		"common-tags": "^1.7.2",
-		"connect-timeout": "^1.9.0",
-		"date-fns": "^1.29.0",
-		"express": "^4.16.3",
-		"express-async-errors": "^2.1.2",
-		"graphql": "^0.13.2",
-		"graphql-server-express": "^1.3.6",
-		"graphql-tools": "^3.0.1",
-		"http-errors": "^1.6.3",
-		"isomorphic-fetch": "^2.2.1",
-		"js-yaml": "^3.12.0",
-		"lodash": "^4.17.10",
-		"neo4j-driver": "^1.6.1",
-    "neo4j-graphql-js": "~0.1.23",
-		"uuid": "^3.2.1"
-	},
-	"devDependencies": {
-		"@financial-times/secret-squirrel": "^2.8.0",
-		"casual": "^1.5.19",
-		"chai": "^4.1.2",
-		"dotenv": "^5.0.1",
-		"eslint": "^4.19.1",
-		"eslint-config-origami-component": "^1.0.0",
-		"eslint-config-prettier": "~2.9.0",
-		"eslint-plugin-prettier": "~2.6.1",
-		"husky": "^0.14.3",
-		"mocha": "^5.1.1",
-		"nodemon": "^1.17.4",
-		"nyc": "^11.8.0",
-		"prettier": "~1.12.1",
-		"proxyquire": "^2.0.1",
-		"sinon": "^4.5.0",
-		"sinon-chai": "^3.0.0",
-		"supertest": "^3.1.0"
-	}
+  "name": "biz-ops-api",
+  "short": "biz-ops-api",
+  "team": "internal-products",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server/app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Financial-Times/biz-ops-api.git"
+  },
+  "engines": {
+    "node": ">= 8.11.1",
+    "npm": ">= 5.6.0"
+  },
+  "scripts": {
+    "lint": "eslint --cache --fix .",
+    "lint-ci": "eslint .",
+    "start": "nodemon -r dotenv/config server/app.js",
+    "debug": "npm start -- --inspect=0.0.0.0:9229",
+    "test:debug": "npm run test-dev --  --inspect-brk",
+    "test": "nyc mocha -- \"+(server|test|schema)/**/*.spec.js\"",
+    "test-dev": "NODE_ENV=test mocha --require dotenv/config 'test/**/*.spec.js'",
+    "init-db": "node -r dotenv/config schema/init-db.js",
+    "docker:test": "docker-compose exec \"$npm_package_short\" sh -c 'npm run test'",
+    "vault:read": "vault read --format json  /secret/teams/$npm_package_team/$npm_package_name/development",
+    "vault:env": "node -pe 'const { data } = JSON.parse(process.argv[1]); Object.keys(data).reduce((env, key) => { env += `${key}=${data[key]}\n`; return env}, \"\")' \"$(npm --silent run vault:read)\" > .env",
+    "precommit": "node_modules/.bin/secret-squirrel",
+    "commitmsg": "node_modules/.bin/secret-squirrel-commitmsg"
+  },
+  "nyc": {
+    "exclude": [
+      "**/test/**",
+      "**/*.spec.js",
+      "**/node_modules/**"
+    ],
+    "reporter": [
+      "html",
+      "text",
+      "text-summary",
+      "lcov"
+    ],
+    "all": true,
+    "cache": true
+  },
+  "author": "reliability engineering <reliability.engineering@ft.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Financial-Times/biz-ops-api/issues"
+  },
+  "homepage": "https://github.com/Financial-Times/biz-ops-api#readme",
+  "nodemonConfig": {
+    "ext": "js,graphql,yaml"
+  },
+  "dependencies": {
+    "@financial-times/n-cluster": "^1.0.0",
+    "@financial-times/n-logger": "^5.6.4",
+    "@financial-times/s3o-middleware": "^2.0.6",
+    "apollo-server-express": "^1.4.0",
+    "aws-sdk": "^2.263.1",
+    "body-parser": "^1.18.3",
+    "common-tags": "^1.7.2",
+    "connect-timeout": "^1.9.0",
+    "date-fns": "^1.29.0",
+    "express": "^4.16.3",
+    "express-async-errors": "^3.0.0",
+    "graphql": "^0.13.2",
+    "graphql-server-express": "^1.4.0",
+    "graphql-tools": "^3.0.5",
+    "http-errors": "^1.6.3",
+    "isomorphic-fetch": "^2.2.1",
+    "js-yaml": "^3.12.0",
+    "lodash": "^4.17.10",
+    "neo4j-driver": "^1.6.2",
+    "neo4j-graphql-js": "github:Limess/neo4j-graphql-js#parameterised-queries-with-dist",
+    "uuid": "^3.2.1"
+  },
+  "devDependencies": {
+    "@financial-times/secret-squirrel": "^2.8.0",
+    "casual": "^1.5.19",
+    "chai": "^4.1.2",
+    "dotenv": "^5.0.1",
+    "eslint": "^4.19.1",
+    "eslint-config-origami-component": "^1.0.0",
+    "eslint-config-prettier": "~2.9.0",
+    "eslint-plugin-prettier": "~2.6.1",
+    "husky": "^0.14.3",
+    "mocha": "^5.1.1",
+    "nodemon": "^1.17.4",
+    "nyc": "^11.8.0",
+    "prettier": "~1.12.1",
+    "proxyquire": "^2.0.1",
+    "sinon": "^4.5.0",
+    "sinon-chai": "^3.0.0",
+    "supertest": "^3.1.0"
+  }
 }
