add new system lifecycle values to enum (#223)
Keeping old ones for now until cmdb-to-bizop updates its mappings

--- a/schema/rules/enums.yaml
+++ b/schema/rules/enums.yaml
@@ -7,11 +7,14 @@ CircleCiVersion:
 SystemLifecycle:
   description: The lifecycle stage of a system
   options:
+    - Requirements #deprecated
+    - Analysis #deprecated
+    - Testing #deprecated
+    - Preproduction
     - Production
-    - Requirements
-    - Retired
-    - Testing
-    - Analysis
+    - Dormant
+    - Retired #deprecated
+    - Decommissioned
 ServiceTier:
   description: A system's support level
   options:
