logging shouldn't break tests  🐿 v2.10.0

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"debug": "npm start -- --inspect=0.0.0.0:9229",
 		"test:debug": "npm run test-dev --  --inspect-brk",
 		"test": "nyc mocha -- \"+(server|test|schema)/**/*.spec.js\"",
-		"test-dev": "NODE_ENV=test mocha --require dotenv/config 'test/**/*.spec.js'",
+		"test-dev": "NODE_ENV=test mocha --require dotenv/config 'test/v1/node-get.spec.js'",
 		"init-db": "node -r dotenv/config schema/init-db.js",
 		"docker:test": "docker-compose exec \"$npm_package_short\" sh -c 'npm run test'",
 		"vault:read": "vault read --format json  /secret/teams/$npm_package_team/$npm_package_name/development",
