load-testing scripts  🐿 v2.10.0

--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
 		"vault:env": "node -pe 'const { data } = JSON.parse(process.argv[1]); Object.keys(data).reduce((env, key) => { env += `${key}=${data[key]}\n`; return env}, \"\")' \"$(npm --silent run vault:read)\" > .env",
 		"precommit": "node_modules/.bin/secret-squirrel",
 		"commitmsg": "node_modules/.bin/secret-squirrel-commitmsg",
-		"test:load:run": "docker-compose -f scripts/load-testing/statsd/docker-compose.yaml up -d && artillery run scripts/load-testing/read-queries/heroku-$TEST_NAME.yaml && docker-compose -f scripts/load-testing/statsd/docker-compose.yaml down",
-		"test:load:crash": "TEST_NAME=crash npm run test:load:run",
-		"test:load:cruising": "TEST_NAME=cruising npm run test:load:run",
-		"test:load:rampup": "TEST_NAME=rampup npm run test:load:run",
-		"test:load:warmup": "TEST_NAME=warmup npm run test:load:run"
+		"test:load:run": "docker-compose -f scripts/load-testing/statsd/docker-compose.yaml up -d && artillery run scripts/load-testing/$TEST_NAME.yaml && docker-compose -f scripts/load-testing/statsd/docker-compose.yaml down",
+		"test:load:generateData": "node scripts/load-testing/lib/generate/index.js",
+		"test:load:readQueries": "TEST_NAME=readQueries npm run test:load:run",
+		"test:load:writeQueries": "TEST_NAME=writeQueries npm run test:load:run",
+		"test:load:deleteWrites": "node scripts/load-testing/after-request.js"
 	},
 	"nyc": {
 		"exclude": [
@@ -68,6 +68,8 @@
 		"date-fns": "^1.29.0",
 		"express": "^4.16.3",
 		"express-async-errors": "^3.0.0",
+		"faker": "^4.1.0",
+		"fs": "0.0.1-security",
 		"graphql": "^0.13.2",
 		"graphql-server-express": "^1.4.0",
 		"graphql-tools": "^3.0.1",
