--- a/scripts/load-testing/readQueries.yaml
+++ b/scripts/load-testing/readQueries.yaml
@@ -7,9 +7,16 @@ config:
           prefix: load.
   phases:
     - duration: 60
-      arrivalRate: 1000
-      name: 'Crash application'
-  processor: "../before-request.js"
+      arrivalRate: 10
+      name: 'Warm up'
+    - duration: 120
+      arrivalRate: 10
+      rampTo: 25
+      name: 'Ramp up'
+    - duration: 1200
+      arrivalRate: 10
+      name: 'Cruise'
+  processor: "./before-request.js"
 scenarios:
   - name: "GraphQL query that returns a list of all the systems and their corresponding properties."
     flow:
@@ -60,4 +67,4 @@ scenarios:
         url: "/graphql"
         beforeRequest: "setHeaders"
         json:
-            query: "{ Systems (serviceTier: Platinum) { code name supportedByTeam { name email phone slack } supportedBySupplier { name email phone } } }"
+            query: "{ Systems(first:600, serviceTier:Bronze) {code name description primaryURL systemType serviceTier serviceType hostPlatform containsPersonalData containsSensitiveData lifecycleStage SF_ID}}"
