--- a/schema/rules/relationships.yaml
+++ b/schema/rules/relationships.yaml
@@ -61,18 +61,19 @@ HAS_PRODUCT_OWNER:
         graphql:
           name: ownedProducts
           description: Products the person is a product owner for
-  - type: MANY_TO_MANY
-    fromType:
-      System:
-        graphql:
-          name: productOwners
-          description: The system's product owner
-    toType:
-      Person:
-        graphql:
-          name: ownedSystems
-          description: Systems the person is a product owner for
 
+HAS_STAKEHOLDER:
+  type: MANY_TO_MANY
+  fromType:
+    System:
+      graphql:
+        name: stakeholders
+        description: The system's stakeholders
+  toType:
+    Person:
+      graphql:
+        name: stakeholderFor
+        description: Systems the person is a stakeholder for
 
 HAS_TEAM:
   -
@@ -104,17 +105,17 @@ HAS_TEAM:
 
 
 HAS_REPO:
-  type: ONE_TO_ONE
+  type: MANY_TO_MANY
   fromType:
     System:
       graphql:
-        name: repository
-        description: The repository which stores the systems source code
+        name: repositories
+        description: The repositories which store the system's source code
   toType:
     Repository:
       graphql:
-        name: system
-        description: System which the repository holds the source code of
+        name: systems
+        description: Systems which the repository holds source code for
 
 MONITORED_BY:
   type: MANY_TO_MANY
@@ -129,58 +130,31 @@ MONITORED_BY:
         name: monitors
         description: The systems which the healthcheck monitors
 
-
 DELIVERED_BY:
-  -
-    type: MANY_TO_ONE
-    fromType:
-      System:
-        graphql:
-          name: deliveredByTeam
-          description: The team which delivers the system
-    toType:
-      Team:
-        graphql:
-          name: delivers
-          description: The systems the team delivers
-  -
-    type: MANY_TO_ONE
-    fromType:
-      System:
-        graphql:
-          name: deliveredBySupplier
-          description: The supplier which delivers the system
-    toType:
-      Supplier:
-        graphql:
-          name: delivers
-          description: The systems the supplier delivers
+  type: MANY_TO_ONE
+  fromType:
+    System:
+      graphql:
+        name: deliveredBy
+        description: The team which delivers the system
+  toType:
+    Team:
+      graphql:
+        name: delivers
+        description: The systems the team delivers
 
 SUPPORTED_BY:
-  -
-    type: MANY_TO_ONE
-    fromType:
-      System:
-        graphql:
-          name: supportedByTeam
-          description: The team which supports the system
-    toType:
-      Team:
-        graphql:
-          name: supports
-          description: The systems the team supports
-  -
-    type: MANY_TO_ONE
-    fromType:
-      System:
-        graphql:
-          name: supportedBySupplier
-          description: The supplier which supports the system
-    toType:
-      Supplier:
-        graphql:
-          name: supports
-          description: The systems the supplier supports
+  type: MANY_TO_ONE
+  fromType:
+    System:
+      graphql:
+        name: supportedBy
+        description: The team which supports the system
+  toType:
+    Team:
+      graphql:
+        name: supports
+        description: The systems the team supports
 
 KNOWN_ABOUT_BY:
   type: MANY_TO_MANY
@@ -228,6 +202,14 @@ DEPENDS_ON:
           description: Products which depend on this system
           recursiveName: recursiveDependentProducts
           recursiveDescription: The products which depend on this system, either directly or indirectly
+  -
+    type: MANY_TO_MANY
+    fromType:
+      # deliberately hidden from graphql
+      Product:
+    toType:
+      # deliberately hidden from graphql
+      Product:
 
 STORED_IN:
   type: MANY_TO_ONE
