--- a/scripts/load-testing/writeQueriesForGroups.yaml
+++ b/scripts/load-testing/writeQueriesForGroups.yaml
@@ -31,7 +31,7 @@ config:
           - "nodeCode"
      order: "sequence"
 scenarios:
-  - name: "Request to create a system node with a relationship to another node"
+  - name: "Request to create a group node with a relationship to another node"
     flow:
       - patch:
           url: "{{ url }}"
