CSV files now uppercase  🐿 v2.10.0

--- a/scripts/load-testing/writeQueriesForGroups.yaml
+++ b/scripts/load-testing/writeQueriesForGroups.yaml
@@ -19,7 +19,7 @@ config:
   processor: "./setup.js"
   payload:
     -
-      path: "./lib/exportToCSV/group.csv"
+      path: "./lib/exportToCSV/Group.csv"
       fields:
           - "primaryNode"
           - "code"
