Removed headers from CSV files - caused perf test to hang  🐿 v2.10.0

--- a/scripts/load-testing/writeQueriesForSystems.yaml
+++ b/scripts/load-testing/writeQueriesForSystems.yaml
@@ -6,19 +6,12 @@ config:
           port: 8125
           prefix: load.
   phases:
-    - duration: 60
+    -
+      duration: 120
       arrivalRate: 10
       name: 'Warm up'
-    - duration: 120
-      arrivalRate: 10
-      rampTo: 25
-      name: 'Ramp up'
-    - duration: 1200
-      arrivalRate: 10
-      name: 'Cruise'
   processor: "./setup.js"
   payload:
-    -
       path: "./lib/exportToCSV/System.csv"
       fields:
           - "primaryNode"
@@ -34,6 +27,6 @@ config:
 scenarios:
   - name: "Request to create a system node with a relationship to another node"
     flow:
-      - patch:
-          url: "{{ url }}"
-          beforeRequest: ["setHeaders", "setCSVToJSONBody"]
+    - patch:
+       url: "{{ url }}"
+       beforeRequest: ["setHeaders", "setCSVToJSONBody"]
