--- a/schema/types/CostCentre.yaml
+++ b/schema/types/CostCentre.yaml
@@ -6,11 +6,11 @@ properties:
     required: true
     unique: true
     canIdentify: true
-    label: 'Code'
+    label: Code
     description: 'Unique code/id for this item'
     pattern: PERMISSIVE
   name:
     type: String
     canIdentify: true
-    label: 'Name'
+    label: Name
     description: The name of the cost centre
