--- a/schema/types/Group.yaml
+++ b/schema/types/Group.yaml
@@ -7,19 +7,19 @@ properties:
     unique: true
     canIdentify: true
     pattern: STRICT_CODE
-    label: 'Code'
+    label: Code
     description: 'Unique code/id for this item'
   name:
     type: String
     canIdentify: true
-    label: 'Name'
+    label: Name
     description: The name of the group
   description:
     type: String
-    label: 'Description'
+    label: Description
     description: What the group does
   isActive:
     type: Boolean
     canFilter: true
-    label: 'Active'
+    label: Active
     description: Whether or not the group is still in existence
