--- a/schema/types/Healthcheck.yaml
+++ b/schema/types/Healthcheck.yaml
@@ -6,16 +6,16 @@ properties:
     required: true
     unique: true
     canIdentify: true
-    label: 'Code'
+    label: Code
     description: 'Unique code/id for this item'
   isLive:
     type: Boolean
     canFilter: true
-    label: 'Live'
+    label: Live
     description: Whether the monitored entity is live
   url:
     type: String
     # required: true
     canIdentify: true
-    label: 'URL'
+    label: URL
     description: The URL to check against
