--- a/schema/types/Konstructor.yaml
+++ b/schema/types/Konstructor.yaml
@@ -6,47 +6,47 @@ properties:
     required: true
     unique: true
     canIdentify: true
-    label: 'Code'
+    label: Code
     description: 'Unique code/id for this item'
     pattern: NO_SPACES
   name:
     type: String
     canIdentify: true
-    label: 'Name'
+    label: Name
     description: The name of the interface
   tags:
     type: String
     canIdentify: true
-    label: 'Tags'
+    label: Tags
     description: The tags of the interface
   type:
     type: String
     canIdentify: true
-    label: 'Type'
+    label: Type
     description: The type of the interface
   isActive:
     type: Boolean
     canFilter: true
     canIdentify: true
-    label: 'Active'
+    label: Active
     description: The tags of the interface
   version:
     type: String
     canIdentify: true
-    label: 'Version'
+    label: Version
     description: The version of the interface
   serviceUrl:
     type: String
     canIdentify: true
-    label: 'Service URL'
+    label: Service URL
     description: The url of the interface
   description:
     type: String
     canIdentify: true
-    label: 'Description'
+    label: Description
     description: The description of the interface
   locationUrl:
     type: String
     canIdentify: true
-    label: 'Location URL'
+    label: Location URL
     description: The url of the interface
