--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -7,30 +7,30 @@ properties:
     required: true
     unique: true
     canIdentify: true
-    label: 'Code'
+    label: Code
     description: 'Unique code/id for this person'
   name:
     type: String
     canIdentify: true
-    label: 'Name'
+    label: Name
     description: The name of the person
   email:
     type: String
     canIdentify: true
-    label: 'Email'
+    label: Email
     description: The email address of the person
   slack:
     type: String
     canIdentify: true
-    label: 'Slack'
+    label: Slack
     description: The slack link for the person
   phone:
     type: String
     canIdentify: true
-    label: 'Phone'
+    label: Phone
     description: The phone contact number for the person
   isActive:
     type: Boolean
     canFilter: true
-    label: 'Active'
+    label: Active
     description: Whether or not the person is still working at the FT
