--- a/schema/types/Product.yaml
+++ b/schema/types/Product.yaml
@@ -7,32 +7,32 @@ properties:
     unique: true
     canIdentify: true
     pattern: STRICT_CODE
-    label: 'Code'
+    label: Code
     description: 'Unique code/id for this item'
   purpose:
     type: String
-    label: 'Purpose'
+    label: Purpose
     description: Brief description of what the product does
   name:
     type: String
     canIdentify: true
-    label: 'Name'
+    label: Name
     description: The name generally used to refer to the product
   serviceTier:
     type: ServiceTier
     # required: true
     canFilter: true
-    label: 'Service tier'
+    label: Service tier
     description: The product's service tier level
   primaryURL:
     type: String
     canIdentify: true
-    label: 'Primary URL'
+    label: Primary URL
     description: The main url the product is served on
   lifecycleStage:
     type: ProductLifecycle
     canFilter: true
-    label: 'Lifecycle stage'
+    label: Lifecycle stage
     description: Lifecycle stage of the product
 
 
