--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -7,32 +7,32 @@ properties:
     unique: true
     canIdentify: true
     pattern: CODE
-    label: 'Code'
+    label: Code
     description: 'Unique code/id for this item'
   name:
     type: String
     canIdentify: true
-    label: 'Name'
+    label: Name
     description: Display name of the system
   description:
     type: String
     canIdentify: true
-    label: 'Description'
+    label: Description
     description: Description of the system
   primaryURL:
     type: String
     canIdentify: true
-    label: 'Primary URL'
+    label: Primary URL
     description: The primary URL of the system
   systemType:
     type: String
     canFilter: true
-    label: 'System type'
+    label: System type
     description: The system type
   serviceTier:
     type: ServiceTier
     canFilter: true
-    label: 'Service tier'
+    label: Service tier
     description: The system's service tier level
   serviceType:
     type: String
