--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
-    "sinon": "^6.1.5"
+    "sinon": "^6.1.5",
+    "sinon-chai": "^3.2.0"
   },
   "dependencies": {
     "@financial-times/n-logger": "^5.7.2",
