--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-prettier": "^2.6.2",
     "mocha": "^5.2.0",
+    "prettier": "^1.14.2",
     "sinon": "^6.1.5",
     "sinon-chai": "^3.2.0"
   },
