--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   },
   "dependencies": {
     "@financial-times/n-logger": "^5.7.2",
+    "clone": "^2.1.2",
     "common-tags": "^1.8.0",
+    "deep-freeze": "0.0.1",
     "graphql-tools": "^3.1.1",
     "js-yaml": "^3.12.0",
     "lodash": "^4.17.10",
